2016-11-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/wchar.h,
	  device/lib/btowc.c,
	  device/lib/incl.mk,
	  device/lib/mbrlen.c,
	  device/lib/mbstowcs.c,
	  device/lib/wcscmp.c,
	  device/lib/wcstombs.c,
	  device/lib/wctob.c,
	  device/lib/wcslen.c,
	  support/regression/tests/string.c,
	  support/regression/tests/wchar.c:
	  Improvements and fixes in wide character library support.

2016-11-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdlib.h,
	  device/lib/incl.mk,
	  device/lib/mbstowcs.c,
	  device/lib/wcstombs.c,
	 .version:
	  Multibyte/wide string conversion functions.
	* src/stm8/gen.c:
	  Optimize comparisons with (partial) 1 and -1.

2016-11-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  More fine-grained handling of volatile to allow more optimizations in lospre.

2016-11-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/z80/ralloc.c:
	  Fix some comments on spilling.
	* support/regression/tests/bug-2559.c

2016-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  configure,
	  src/SDCCasm.c,
	  src/SDCCasm.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/port.h,
	  src/xa51,
	  support/regression/ports/xa51,
	  support/regression/Makefile.in:
	  Kill incomplete, unmaintained xa51 backend.

2016-11-07 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Fix a bug in zeror-divider check.

2016-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdbool.h,
	  src/ds390/gen.c,
	  support/regression/tests/bitopcse.c,
	  support/regression/tests/bool.c,
	  support/regression/tests/bug2942247.c,
	  support/regression/tests/bug3404101.c,
	  support/regression/tests/bug3565757.c:
	  bool for ds390.

2016-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	  src/SDCCloop.c,
	  src/SDCCopt.c,
	  src/port.h,
	  src/*/main.c:
	  Replace all muldiv uses by hasNativeMulFor().

2016-10-23 Philipp Klaus Krause <pkk AT spth.de>